--- a/EjemploMavenWeb/src/main/webapp/WEB-INF/web.xml
+++ b/EjemploMavenWeb/src/main/webapp/WEB-INF/web.xml
@@ -8,11 +8,7 @@
     xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd">
   <display-name>Archetype Created Web Application</display-name>
   <context-param>
-  	<param-name>prueba</param-name>
-  	<param-value>DAMMMM</param-value>
-  </context-param>
-  <context-param>
-  	<param-name></param-name>
-  	<param-value></param-value>
+  	<param-name>bbdd</param-name>
+  	<param-value>datos</param-value>
   </context-param>
 </web-app>
